completed the setup for the navigation section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
                     </ul>
                 </div>
             </header>
-            <nav>Nav</nav>
+            <nav class="nav-container">
+                <ul class="nav-list">
+                    <li class="nav-list-items"><a href="#" class="nav-link">Home</a></li>
+                    <li class="nav-list-items"><a href="#" class="nav-link">About</a></li>
+                    <li class="nav-list-items"><a href="#" class="nav-link">Blog</a></li>
+                    <li class="nav-list-items"><a href="#" class="nav-link">Contact</a></li>
+                </ul>
+            </nav>
             <main>Main</main>
             <aside>Aside Content</aside>
             <footer>Footer</footer>
