created the main content for the website

--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
                     <li class="nav-list-items"><a href="#" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
-            <main>Main</main>
+            <main class="main-container">
+                <div class="main-content-container">
+                    <h1 class="main-header">Welcome to the Website</h1>
+                    <div class="main-img-container">
+                        <img src="https://cdn.pixabay.com/photo/2022/11/27/01/47/boat-7618814_1280.jpg" alt="boat in water" class="image-itself">
+                    </div>
+                    <p class="main-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error distinctio labore, voluptates asperiores tempora quaerat debitis, optio mollitia, accusantium officiis minus quia. Dicta tenetur dignissimos, recusandae aliquid saepe tempore. Laboriosam quos animi mollitia nesciunt quia aliquam? Ipsa possimus expedita quaerat quo minus corporis libero illo ipsam molestiae consequuntur, ad soluta labore dignissimos reiciendis quia porro? Eveniet natus commodi iusto magnam odio enim molestiae vero quae? Aut nostrum quam laborum dignissimos dolor? Iste doloribus, architecto officia temporibus corrupti atque modi ipsa eius ipsam commodi necessitatibus ratione enim. Soluta natus sit fuga et inventore omnis mollitia ducimus. Perspiciatis saepe, nihil doloribus quibusdam autem nobis mollitia reiciendis? Consequatur fugiat possimus error adipisci officia excepturi, ab doloribus labore asperiores soluta eius? Laborum voluptate omnis, ratione quaerat tempore explicabo libero beatae, eum qui quidem maxime iure quod debitis! Cumque, natus! Quod, minus doloribus optio suscipit nisi consequatur modi, ad, maiores eligendi in possimus dolore inventore.</p>
+                    <p class="readmore"><a href="#" class="readmore-link">Read More</a></p>
+                </div>
+            </main>
             <aside>Aside Content</aside>
             <footer>Footer</footer>
         </div>
