added to the aside section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,29 @@
                     <p class="readmore"><a href="#" class="readmore-link">Read More</a></p>
                 </div>
             </main>
-            <aside>Aside Content</aside>
+            <aside>
+                <div class="aside-header-background">
+                    <h1 class="aside-header">Sign up to receive exclusive content</h1>
+                    <form class="aside-form" >
+                        <label class="aside-label" for="email"></label>
+                        <input type="email" id="email" placeholder="Your Email">
+                        <button class="aside-submit">Sign Up</button>
+                        <p class="aside-text">By signing up, you'll recieve exclusive content and be the first for breaking news!</p>
+                    </form>
+                </div>
+                
+                <div class="categories"> 
+                    <h3 class="aside-category-header">Categories</h3>
+                    <ul class="aside-list">
+                        <li class="aside-list-items"><a class="aside-links" href="#">Pacific Ocean</a></li>
+                        <li class="aside-list-items"><a class="aside-links" href="#">Atlantic Ocean</a></li>
+                        <li class="aside-list-items"><a class="aside-links" href="#">Indian Ocean</a></li>
+                        <li class="aside-list-items"><a class="aside-links" href="#">Artic Ocean</a></li>
+                        <li class="aside-list-items"><a class="aside-links" href="#">Southern Ocean</a></li>
+                        <li class="aside-list-items"><a class="aside-links" href="#">Made up Ocean</a></li>
+                    </ul>
+                </div>
+            </aside>
             <footer>Footer</footer>
         </div>
     </div>
