--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
                     </ul>
                 </div>
             </aside>
-            <footer>Footer</footer>
+            <footer>
+                <p class="copyright-text">
+                    &copy;2026 The Webite. All Rights Reserved
+                </p>
+            </footer>
         </div>
     </div>
 </body>
